# keybear-cli

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  release.yml
src/: config.rs  main.rs  net.rs
src/command/: edit.rs  find.rs  generate.rs  init.rs  insert.rs  ls.rs  mod.rs  register.rs  rm.rs  show.rs
tests/: cli_test.rs
