[package]
name = "keybear-cli"
version = "0.1.0"
authors = ["Thomas Versteeg <thomas@versteeg.email>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/keybear/keybear"
description = "CLI client for Keybear password manager"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "kb"
path = "src/main.rs"

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.36"
clap = "3.0.0-beta.2"
directories-next = "2.0.0"
log = "0.4.11"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"

[dev-dependencies]
assert_cmd = "1.0.2"
tempdir = "0.3.7"

[package.metadata.deb]
license-file = ["LICENSE", "0"]
depends = "$auto, tor"
assets = [
	["target/release/kb", "/usr/bin/", "755"],
]
