[package]
name = "keybear-cli"
version = "0.1.0"
authors = ["Thomas Versteeg <thomas@versteeg.email>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/keybear/keybear"
description = "CLI client for Keybear password manager"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "kb"
path = "src/main.rs"

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.36"
chbs = "0.0.10"
clap = "3.0.0-beta.2"
directories-next = "2.0.0"
human-panic = "1.0.3"
keybear-core = "0.1.3"
log = "0.4.11"
reqwest = { version = "0.10.10", default-features = false, features = ["socks", "json"] }
serde = { version = "1.0.118", features = ["derive"] }
stderrlog = "0.5.0"
tokio = { version = "0.2.0", default-features = false, features = ["macros"] }
toml = "0.5.8"
x25519-dalek = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "1.0.2"
tempfile = "3.1.0"

[package.metadata.deb]
license-file = ["LICENSE", "0"]
depends = "$auto, tor"
assets = [
	["target/release/kb", "/usr/bin/", "755"],
]
