[package]
name = "keybear-cli"
version = "0.1.0"
authors = ["Thomas Versteeg <thomas@versteeg.email>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/keybear/keybear"
description = "CLI client for Keybear password manager"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "kb"
path = "src/main.rs"

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.38"
chbs = "0.1.0"
clap = "3.0.0-beta.2"
directories-next = "2.0.0"
human-panic = "1.0.3"
keybear-core = "0.3.2"
log = "0.4.13"
reqwest = { version = "0.11.0", default-features = false, features = ["socks", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
stderrlog = "0.5.1"
tokio = { version = "1.1.0", default-features = false, features = ["macros", "rt"] }
toml = "0.5.8"
x25519-dalek = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.0"
tempfile = "3.2.0"

[package.metadata.deb]
license-file = ["LICENSE", "0"]
depends = "$auto, tor"
assets = [
	["target/release/kb", "/usr/bin/", "755"],
]
